--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 #Discord Bot Token
 
-TOKEN=MTE1MzMzMzc5NDk5MzA4NjQ5NQ.GKHlsQ.qwQ3yHgZSS5GlcLWHfPMoRH2eAvMBvmUODl8lQ
+TOKEN=MTE1MzMzMzc5NDk5MzA4NjQ5NQ.GEwEoS.Wg2V2KeicvWiu3Cl-lWsBbCMdAxfSAGamoPEAc
 
 # Configure the PostgreSQL connection settings.
 # Database Provider You Can Use 
