--- a/.env
+++ b/.env
@@ -12,7 +12,8 @@ TOKEN=MTE1MzMzMzc5NDk5MzA4NjQ5NQ.GEwEoS.Wg2V2KeicvWiu3Cl-lWsBbCMdAxfSAGamoPEAc
 # For non-SSL connections, simply remove the "?sslmode=verify-full" parameter.
 # Please Remove The Database Postgresql String Use Your Own Database
 
-POSTGRES_CONNECTION_STRING=postgresql://nigga_boyyes:Vnf6hJWqPjfA67kbfYagsg@fossil-gnu-4962.8nk.cockroachlabs.cloud:26257/defaultdb
+POSTGRES_CONNECTION_STRING=postgres://postgres:AyWRtEMBRcBHBu1LcnKe@containers-us-west-99.railway.app:7561/railway
+
 
 #Custumer Role Name And ID
 
