--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ POSTGRES_CONNECTION_STRING=postgres://postgres:AyWRtEMBRcBHBu1LcnKe@containers-u
 
 #Custumer Role Name And ID
 
-CUSTUMER_ROLE_NAME=Buyer
+CUSTUMER_ROLE_NAME=ConjurerX Member
 CUSTUMER_ROLE_ID=1152860911703433237
 
 #Server ID
